@@ -1,6 +1,7 @@
 ---
 
 * [Bug 2961] sntp/tests/packetProcessing.c assumes AUTOKEY.  HStenn.
+* [Bug 3084] update-leap mis-parses the leapfile name.  HStenn.
 
 ---
 (4.2.8p8) 2016/06/02 Released by Harlan Stenn <stenn@ntp.org>
